public class Component {
    public int id;
    public int natureSize;
    public int stretchAbility;
    public int shrinkAbility;
    public String content;

    public Component(int id, int natureSize, int stretchAbility, int shrinkAbility, String content){
        this.id = id;
        this.natureSize = natureSize;
        this.stretchAbility = stretchAbility;
        this.shrinkAbility = shrinkAbility;
        this.content = content;
    }
}
