import java.util.ArrayList;

public interface Compose{
    public void compose(ArrayList<Component> components);
}