public class Text extends Component{
    public Text(int id, int natureSize, int stretchAbility, int shrinkAbility, String content){
        super(id, natureSize, stretchAbility, shrinkAbility, content);
    }
}
